# rl-intern-

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
agent/: __init__.py  cli.py
agent/core/: __init__.py  agent_loop.py  context_manager.py  doom_loop.py  events.py  mcp_client.py  session.py  tool_router.py  tools.py
configs/: main_agent_config.json
examples/: custom_tool.py  programmatic_usage.py
tests/: test_core.py  test_mcp.py
