[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-intern"
version = "0.1.0"
description = "🤖 rl-intern: an open-source RL engineer that reads papers, trains agents, and ships RL models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "rl-intern contributors" }]

dependencies = [
    "anthropic>=0.40.0",
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "huggingface-hub>=0.24.0",
    "requests>=2.32.0",
    "aiohttp>=3.9.0",
    "arxiv>=2.1.0",
    "beautifulsoup4>=4.12.0",
    "gymnasium>=0.29.0",
    "pyyaml>=6.0.1",
    "mcp>=1.0.0",
]

[project.scripts]
rl-intern = "agent.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
